--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "foto",
+  "name": "node-with-ts",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -10,9 +12,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cron": "^1.8.2",
-    "request": "^2.88.2",
+    "express": "^4.17.1",
     "sunrise-sunset-js": "^2.2.1"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.6.1",
+    "@types/cron": "^1.7.2",
+    "@types/sunrise-sunset-js": "^2.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.2"
+  }
 }
