--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sunrise-sunset-js": "^2.2.1"
+    "sunrise-sunset-js": "^2.2.1",
+    "twit": "^2.2.11"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
-    "@types/cron": "^1.7.2",
     "@types/sunrise-sunset-js": "^2.0.0",
+    "@types/twit": "^2.2.29",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   }
