--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/shelljs": "^0.8.8",
     "axios": "^0.21.1",
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "shelljs": "^0.8.4",
     "sunrise-sunset-js": "^2.2.1",
     "twit": "^2.2.11"
   },
