--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "shelljs": "^0.8.4",
     "sunrise-sunset-js": "^2.2.1",
     "twit": "^2.2.11"
