--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "jimp": "^0.16.1",
     "shelljs": "^0.8.4",
     "sunrise-sunset-js": "^2.2.1",
     "twit": "^2.2.11"
